# xtiles

./: Makefile  NOTES  README.md  xtiles.cabal  xtiles.hs
example/1/: xtiles-config.xml
example/blog/: xtiles-config.xml
example/home-page/in/: about.html  blog.html  hobbies.html  hobbies.html.desc  hobbies.html.xtiles  homepage.xtiles  menu.html  template.html  xtiles.config
example/home-page/in/blog/: entry1.xml  entry2.xml  entry3.xml
src/: Config.hs  xtiles.hs
